# serial_binary_tele_plotter

./: .env.example  .gitignore  README.md  all_code.txt  dump.sh  main.py  mypy.ini  pyproject.toml  ruff.toml  streams.json  streams.json.bak  styles.py
core/: config.py  data_manager.py  frame_decoder.py  frame_types.py  loader.py  protocol.py  protocol_handler.py  types.py  virtual_device.py  worker.py
core/acquisition/: engine.py  storage.py  virtual.py
core/protocol/: constants.py  crc.py  decoder.py  handler.py
tests/: conftest.py  test_acquisition_engine.py  test_acquisition_storage.py  test_acquisition_virtual.py  test_core_config.py  test_core_types_and_init.py  test_protocol_modules.py  test_ui_telemetry_plot.py
ui/: main_window.py  panels.py  plot_area.py  widgets.py
ui/charts/: telemetry_plot.py
ui/common/: color_button.py  widgets.py
ui/config/: stream_editor.py  tab.py
ui/panels/: connection.py  container.py  imu.py  panels.py  pid.py  signals.py  timing.py
